--- a/ui/mm-react/src/components/Button.css
+++ b/ui/mm-react/src/components/Button.css
@@ -1,23 +1,19 @@
 .button {
-  background-color: #d9d9d9;
-  border: 2px solid #d9d9d9;
-  border-radius: 4px;
-  padding: 5px 12px;
+  background-color: #000000;
+  border-radius: 24px;
+  padding: 12px 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  font-weight: bold;
   cursor: pointer;
   outline: none;
-  margin: 8px 4px 0 0;
-  color: #262626;
+  margin: 8px 0 0 0;
+  color: #ffffff;
 }
 
 .button__disabled {
   opacity: 0.6;
   cursor: not-allowed;
-}
-
-.button:hover:not(.button__disabled) {
-  border: 2px solid #bfbfbf;
 }
