--- a/ui/mm-react/src/components/Header.css
+++ b/ui/mm-react/src/components/Header.css
@@ -1,22 +1,10 @@
 .header {
-  background-color: #3d4761;
+  background-color: #ffffff;
+  padding: 16px;
+  box-shadow: 0px 5px 5px 2px rgba(167, 168, 170, 0.28);
 }
 
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.header h1 {
-  float: left;
-  margin: 0 8px 0 16px;
-  padding: 0;
-  color: white;
-  text-transform: uppercase;
-  font-size: 42px;
-}
-
-.header .codePegList {
-  float: left;
+.header .logo {
+  display: block;
+  margin: auto;
 }
