--- a/ui/mm-react/src/index.css
+++ b/ui/mm-react/src/index.css
@@ -5,7 +5,7 @@ body {
   font-variant-numeric: tabular-nums;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #dfe6ed;
+  background-color: #E1E2E7;
 }
 
 code {
