style and sizing fixes

--- a/ui/mm-react/src/components/CodePeg.css
+++ b/ui/mm-react/src/components/CodePeg.css
@@ -1,11 +1,11 @@
 
 :root {
-  --code-peg-blue: #36C5F1;
-  --code-peg-green: #2DB67E;
-  --code-peg-orange: #EB4B2E;
-  --code-peg-purple: #8B288E;
-  --code-peg-red: #DF1D5A;
-  --code-peg-yellow: #EBB22E;
+  --code-peg-blue: #1890FF;
+  --code-peg-green: #52C41A;
+  --code-peg-orange: #FA8C16;
+  --code-peg-purple: #722ED1;
+  --code-peg-red: #F5222D;
+  --code-peg-yellow: #FADB14;
   --code-peg-empty: #ffffff;
   --code-peg-border: #D8D8D8;
 }
