--- a/ui/mm-react/src/components/Header.css
+++ b/ui/mm-react/src/components/Header.css
@@ -1,7 +1,8 @@
 .header {
   background-color: #ffffff;
-  padding: 16px;
-  box-shadow: 0px 5px 5px 2px rgba(167, 168, 170, 0.28);
+  border: 1px solid #DFE3E6;
+  padding: 10px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.1) ;
 }
 
 .header .logo {
