--- a/ui/mm-react/src/components/Header.css
+++ b/ui/mm-react/src/components/Header.css
@@ -9,3 +9,15 @@
   display: block;
   margin: auto;
 }
+
+.header a {
+  float: right;
+  font-size: 12px;
+  color: #595959;
+  margin: 5px 0 0 0;
+  text-decoration: none;
+}
+
+.header a:hover {
+  text-decoration: underline;
+}
