--- a/ui/mm-react/src/index.css
+++ b/ui/mm-react/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  min-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-variant-numeric: tabular-nums;
   -webkit-font-smoothing: antialiased;
