begin assist mode

--- a/ui/mm-react/src/components/KeyPeg.css
+++ b/ui/mm-react/src/components/KeyPeg.css
@@ -2,11 +2,12 @@
   --key-peg-position: #000000;
   --key-peg-color: #bfbfbf;
   --key-peg-empty: #ffffff;
-  --key-peg-border: #9E9E9E;
+  --key-peg-border: #D8D8D8;
 }
+
 .keyPeg {
-  height: 15px;
-  width: 15px;
+  height: 12px;
+  width: 12px;
   background-color: var(--key-peg-color-empty);
   border: 1px solid var(--key-peg-border);
   border-radius: 50%;
