--- a/ui/mm-react/src/components/DecodeGrid.css
+++ b/ui/mm-react/src/components/DecodeGrid.css
@@ -2,6 +2,7 @@
   margin-top: 6px;
   background-color: #ffffff;
   padding: 4px 8px 4px 8px;
+  max-width: 304px;
   border-radius: 0 24px 0 24px;
 }
 
@@ -31,14 +32,19 @@ tr.decodeRow > td {
 }
 
 tr.decodeRow > td.rowHead {
-  padding: 2px 6px 2px 17px;
+  padding: 2px 6px 2px 16px;
 }
 
 .decodeGrid td.keys {
-  padding: 0 0 0 8px;
+  padding: 0 6px 0 8px;
   margin: 0;
 }
 
 .decodeGrid tr.solution {
   background-color: #f2f3f8;
+}
+
+.decodeGrid .codePeg {
+  height: 24px;
+  width: 24px;
 }
