--- a/ui/mm-react/src/components/Assist.css
+++ b/ui/mm-react/src/components/Assist.css
@@ -2,16 +2,16 @@
   margin: 6px 0 0 6px;
   background-color: #ffffff;
   padding: 4px 8px 4px 8px;
-  width: 242px;
-  height: 506px;
-  border-radius: 24px 0 24px 0;
+  height: 462px;
+  border-radius: 0 24px 0 0;
 }
 
-.assist p {
-  text-align: center;
+.assist h2 {
   font-size: 14px;
+  font-weight: normal;
   color: #595959d0;
-  padding: 2px;
+  text-align: center;
+  padding: 4px 8px;
   margin: 4px;
   border-radius: 24px;
   background-color: #F2F3F8;
@@ -22,6 +22,7 @@
   font-size: 14px;
   color: #9E9E9E;
   text-align: right;
+  margin-bottom: 12px;
 }
 
 .assist td {
@@ -62,7 +63,7 @@
 
 .assist ul {
   padding-left: 16px;
-  height: 280px;
+  height: 216px;
   font-size: 14px;
   color: #9E9E9E;
   overflow: scroll;
