--- a/ui/mm-react/src/components/DecodeGrid.css
+++ b/ui/mm-react/src/components/DecodeGrid.css
@@ -3,14 +3,15 @@
   background-color: #ffffff;
   padding: 4px 8px 4px 8px;
   max-width: 304px;
-  border-radius: 0 24px 0 24px;
+  border-radius: 0 0 0 24px;
 }
 
-.decodeGrid .caption {
-  text-align: center;
+.decodeGrid h2 {
   font-size: 14px;
+  font-weight: normal;
   color: #595959d0;
-  padding: 2px;
+  text-align: center;
+  padding: 4px;
   margin: 4px;
   border-radius: 24px;
   background-color: #F2F3F8;
@@ -32,7 +33,8 @@ tr.decodeRow > td {
 }
 
 tr.decodeRow > td.rowHead {
-  padding: 2px 6px 2px 16px;
+  padding: 2px 8px 2px 12px;
+  text-align: right;
 }
 
 .decodeGrid td.keys {
