--- a/ui/mm-react/src/components/KeyPeg.css
+++ b/ui/mm-react/src/components/KeyPeg.css
@@ -6,8 +6,10 @@
 }
 
 .keyPeg {
-  height: 12px;
-  width: 12px;
+  margin: 0;
+  padding: 0;
+  height: 10px;
+  width: 10px;
   background-color: var(--key-peg-color-empty);
   border: 1px solid var(--key-peg-border);
   border-radius: 50%;
