--- a/ui/mm-react/src/components/CodePeg.css
+++ b/ui/mm-react/src/components/CodePeg.css
@@ -8,11 +8,12 @@
   --code-peg-yellow: #FADB14;
   --code-peg-empty: #ffffff;
   --code-peg-border: #D8D8D8;
+  --code-peg-size-large: 38px;
 }
 
 .codePeg {
-  height: 38px;
-  width: 38px;
+  height: var(--code-peg-size-large);
+  width: var(--code-peg-size-large);
   background-color: var(--code-peg-empty);
   border: 1px solid var(--code-peg-border);
   border-radius: 50%;
