--- a/ui/mm-react/src/components/DecodeGrid.css
+++ b/ui/mm-react/src/components/DecodeGrid.css
@@ -1,23 +1,34 @@
 .decodeGrid {
-  margin-top: 6px;
+  margin: 4px 0 4px 2px;
+  padding: 2px 4px 2px 4px;
+  display: inline-block;
   background-color: #ffffff;
-  padding: 4px 8px 4px 8px;
-  max-width: 304px;
-  border-radius: 0 0 0 24px;
+  border-radius: 0 24px 0 24px;
+  width: -moz-min-content;
+  width: -webkit-min-content;
+  width: min-content;
+  position: relative;
+  z-index: 10;
 }
 
-.decodeGrid h2 {
+.decodeGrid .caption {
+  margin: 12px 0 8px 0;
+  text-align: center;
+}
+
+.decodeGrid .caption span {
+  display: inline-block;
   font-size: 14px;
   font-weight: normal;
-  color: #595959d0;
-  text-align: center;
-  padding: 4px;
-  margin: 4px;
+  font-weight: 500;
+  color: #515151;
+  padding: 4px 16px;
   border-radius: 24px;
   background-color: #F2F3F8;
 }
 
 .decodeGrid table {
+  display: inline-block;
   border-collapse: collapse;
 }
 
@@ -25,15 +36,15 @@
   border-bottom: 1px solid #D8D8D8;
 }
 
-tr.decodeRow > td {
-  padding: 2px 6px;
+tr.decodeRow>td {
+  padding: 4px 6px;
   margin: 0;
   font-size: 18px;
   color: #D8D8D8;
 }
 
-tr.decodeRow > td.rowHead {
-  padding: 2px 8px 2px 12px;
+tr.decodeRow>td.rowHead {
+  padding: 4px 12px 4px 16px;
   text-align: right;
 }
 
