--- a/ui/mm-react/src/components/Header.css
+++ b/ui/mm-react/src/components/Header.css
@@ -1,23 +1,12 @@
 .header {
+  margin: 0;
+  padding: 10px;
   background-color: #ffffff;
   border: 1px solid #DFE3E6;
-  padding: 10px;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.1);
 }
 
 .header .logo {
   display: block;
   margin: auto;
-}
-
-.header a {
-  float: right;
-  font-size: 12px;
-  color: #595959;
-  margin: 5px 0 0 0;
-  text-decoration: none;
-}
-
-.header a:hover {
-  text-decoration: underline;
 }
