--- a/ui/mm-react/src/containers/DecodeEditor.css
+++ b/ui/mm-react/src/containers/DecodeEditor.css
@@ -1,28 +1,16 @@
+.decodeEditor .c1, .c2 {
+  display: inline-block;
+  vertical-align: top;
+}
+
 .decodeEditor p {
   color: #595959;
   font-size: 16px;
-  line-height: 24px;
   padding: 0;
-  margin: 0 0 8px 0;
-}
-
-.decodeEditor .codePegList {
-  float: left;
-}
-
-.decodeEditor .decodeGrid {
-  float: left;
-}
-
-.decodeEditor .assist {
-  float: left;
+  margin: 0 0 0 0;
 }
 
 .decodeEditor .gameover .message {
-  float: left;
-  margin: 16px 8px 0 62px;
-}
-
-.decodeEditor .gameover .buttons {
-  float: left;
+  margin: 8px;
+  display: inline-block;
 }
