--- a/ui/mm-react/src/components/IconButton.css
+++ b/ui/mm-react/src/components/IconButton.css
@@ -12,6 +12,11 @@
   background-repeat: no-repeat;
 }
 
+.iconButton__disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
 .iconButton.check {
   color: #ffffff;
   background-color: #262626;
