--- a/ui/mm-react/src/components/CodePegList.css
+++ b/ui/mm-react/src/components/CodePegList.css
@@ -13,7 +13,7 @@
 }
 
 .codePegList ul.picker {
-  margin: 0;
+  margin: 12px 0 8px 0px;
   padding: 4px 2px 4px 2px;
   background-color: white;
   border-radius: 16px 0 16px 0;
